# DA-first-lab

./: first_lab.cpp  main.cpp
Lab5/: CMakeLists.txt  Tests.cpp  main.cpp
Lab5/include/: dynamic_array.h
PetProj/include/: snake.h
PetProj/src/: snake.cpp
include/: TRS.h
lab4/: CMakeLists.txt  main.cpp
lab4/include/: RFS.h
labOC_1/: numbers.txt
src/: TRS.cpp
tests/: tests_figures_simple.cpp
